
    HIVE-1216. Show the row with error in mapper/reducer
    (Zheng Shao via He Yongqiang)

    HIVE-1246. Map join followde by another map join runs in a single map-only job
    (He Yongqiang via namit)

    HIVE-1220. accept TBLPROPERTIES on CREATE TABLE/VIEW
    (John Sichi via namit)

    HIVE-1258. Disable merge files when bucketing/sorting is being enforced
    (He Yongqiang via namit)

  OPTIMIZATIONS

  BUG FIXES

    HIVE-1047. Merge tasks in GenMRUnion1
    (Ning Zhang via namit)

    HIVE-1048. Make output of TestParse determinisitc
    (Paul Yang via namit)

    HIVE-1045. (bigint % int) should return bigint instead of double.
    (Paul Yang via zshao)

    HIVE-1046. Pass build.dir.hive and other properties to subant
    (Zheng Shao via namit)

    HIVE-1066. Fix test outputs serde_typedbytes*.q
    (Zheng Shao via namit)

    HIVE-1064. Null Pointer Exception in Hive CLI in distributed mode
    (Carl Steinbach via Ning Zhang)

    HIVE-1075. Make it possible for users to recover data when moveTask fails
    (Zheng Shao via Ning Zhang)

    HIVE-1072. Show table extended to error out when the partition does not exist.
    (Yongqiang He via zshao)

    HIVE-1085. ColumnarSerde should not be the default Serde when user
    specified a fileformat using 'stored as' (Yongqiang He via Ning Zhang)

    HIVE-1086. Add "-Doffline=true" option to ant. (Zheng Shao via Ning Zhang)

    HIVE-1094. Disable streaming last table if there is a skew key in
    previous tables. (He Yongqiang via namit)

    HIVE-1097. Increase memory for groupby_bigdata.q for intermittent OOM
    (Paul Yang via namit)

    HIVE-763. getSchema returns invalid column names, getThriftSchema does
    not return old style string schemas (John Sichi via namit)

    HIVE-1102. make number of concurrent tasks configurable
    (He Yongqiang via namit)

    HIVE-1069. CREATE VIEW followup: find and document current expected
    version of thrift (John Sichi via namit)
